--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -1,7 +1,9 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: chasedraizin
+# "app" enables Serverless Framework Dashboard features and sharing them with other Services.
+app: meetapp
 # "service" is the name of this project. This will also be added to your AWS resource names.
-service: Meet-App
+service: auth-server
 
 provider:
   name: aws
