--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -8,7 +8,18 @@ service: auth-server
 provider:
   name: aws
   runtime: nodejs20.x
+  region: es-east-1
+  timeout: 30 
+  environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
+
 
 functions:
-  hello:
-    handler: handler.hello
+  getAuthURL:
+    handler: handler.getAuthURL
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
