--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -8,7 +8,7 @@ service: auth-server
 provider:
   name: aws
   runtime: nodejs20.x
-  region: es-east-1
+  region: us-east-1
   timeout: 30 
   environment:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
